# minimizer

./: .rustfmt.toml  Cargo.toml  Changelog.txt  LICENSE  README.md  test.txt
.github/workflows/: ci.yml  ruff_build.yml
src/: common.rs  data_trait.rs  main.rs  rules.rs  settings.rs  strategy.rs
src/strategy/: common.rs  general.rs  general_multi.rs  pedantic.rs
