[package]
name = "minimizer"
version = "1.1.0"
edition = "2021"
authors = ["Rafał Mikrut"]
description = "Minimize files to find minimal test case"
homepage = "https://github.com/qarmin/minimizer"
repository = "https://github.com/qarmin/minimizer"
license = "MIT"

[dependencies]
rand = "0.8"
walkdir = "2.5"
clap = { version = "4.5", features = ["derive"] }
strum = "0.26"
strum_macros = "0.26"

[profile.release]
#debug = true
debug-assertions = true
overflow-checks = true
lto = "thin"