[package]
name = "minimizer"
version = "2.0.3"
edition = "2021"
authors = ["Rafał Mikrut"]
description = "Minimize files to find minimal test case"
homepage = "https://github.com/qarmin/minimizer"
repository = "https://github.com/qarmin/minimizer"
license = "MIT"

[dependencies]
rand = "0.8"
walkdir = "2.5"
clap = { version = "4.5", features = ["derive"] }
strum = { version = "0.26", features = ["strum_macros"] }
strum_macros = "0.26"
once_cell = "1.20.2"
rayon = "1.10.0"

[profile.release]
debug = true
debug-assertions = true
overflow-checks = true
lto = "thin"